--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,5 @@ RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
 RewriteRule ^ /%1 [NC,L,R]
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^ %{REQUEST_URI}.html [NC,L]
+
+ErrorDocument 404 /not_found.html
